src/main/java/com/example/carrie/errors/custom/NotFound.java
package com.example.carrie.errors.custom;

public class NotFound extends RuntimeException {
    public NotFound(String message) {
        super(message);
    }
}
